-------------------------- specstore 0.1-1 (2011-05-24) --------------------------
* proper package structure and documentation
* first semi-public release